[csr] add `private_server` certificate type
